[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/objects/large_objects/sarcophagi/sarcophagus_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/objects/large_objects/sarcophagi/sarcophagus_lid_saint.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/objects/large_objects/sarcophagi/sarcophagus_lid_plain.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/objects/large_objects/sarcophagi/sarcophagus_lid_knight.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/large_objects/sarcophagi/sarcophagus.gd" type="Script" id=5]
[ext_resource path="res://utils/auto_free.gd" type="Script" id=6]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 3, 1.5, 3 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0, 1, 0.188235, 0.294118 )

[node name="Sarcophagus" type="Spatial"]
script = ExtResource( 5 )
current_lid = 1

[node name="LidScenes" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "KNIGHT", "PLAIN", "SAINT" ), [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ] ]

[node name="PositionPlain" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.479, 1.077, 1.19 )

[node name="PositionKnight" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.479, 1.034, 1.19 )

[node name="PositionSaint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.479, 1.079, 1.19 )

[node name="SarcophagusBase" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1.15 )

[node name="2Tiles" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.75, 1.5 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 6 )
